--- a/cabal.project
+++ b/cabal.project
@@ -9,6 +9,7 @@ packages:
     cardano-node
     cardano-node-chairman
     cardano-submit-api
+    trace-forward
     nix/supervisord-cluster/topology
 
 package cardano-api
@@ -50,6 +51,9 @@ package cardano-node
   tests: True
 
 package cardano-node-chairman
+  tests: True
+
+package trace-forward
   tests: True
 
 -- The following is needed because Nix is doing something crazy.
